--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "I am not poiuy | JcdeA
-title_separator          : "-"
+title                    : "I am not poiuy"
+title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "I am not poiuy"
 description              : "회사에서는 월급 받고 집에서는 취미로 코딩하는 개발자의 블로그"
 url                      : "https://iampoiuy.github.io"
 baseurl                  : # 서브 경로가 있는 경우 기재
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "iampoiuy/iampoiuy.github.io"
 teaser                   : "/assets/images/bio-photo-keyboard.jpg"
 logo                     : # 최상단 메뉴 바에 사이트 로고 넣기
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
