--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ algolia:
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
-  search_engine_id       : # YOUR_SEARCH_ENGINE_ID
+  search_engine_id       : "002906656228248820476:2ux71fep3wg"
   instant_search         : # false (default), true
 # SEO Related
 google_site_verification :
