--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "|"
 subtitle                 : ""
 name                     : "JcdeA"
 description              : "One of the developers that haven't (yet) changed the world."
-url                      : "https://iampoiuy.github.io"
+url                      : "https://pkestrel.github.io"
 baseurl                  : 
 repository               : "pkestrel/pkestrel.github.io"
 teaser                   : "/assets/images/bio-photo-keyboard.jpg"
